--- a/src/main/webapp/public/forgot.xhtml
+++ b/src/main/webapp/public/forgot.xhtml
@@ -1,106 +1,171 @@
-<?xml version="1.0" encoding="UTF-8" ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://java.sun.com/jsf/facelets"    
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:p="http://primefaces.org/ui">
-    <h:head>
-        <f:facet name="first">
-            <meta charset="utf-8"/>
-            <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-            <meta name="viewport" content="width=device-width, initial-scale=1"/>
-            <meta name="description" content=""/>
-            <meta name="author" content="ITCS"/>
-            <meta content='text/html; charset=UTF-8' http-equiv="Content-Type"/>
-            <title><ui:insert name="title">#{applicationBean.helpdeskTitle}</ui:insert></title>     
-        </f:facet>
-
-        <link href="#{facesContext.externalContext.requestContextPath}/resources/css/loginCss.css" rel="stylesheet" type="text/css"/>
-
-        <link rel="dns-prefetch" href="//netdna.bootstrapcdn.com" />            
-        <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"/>
-        <!-- Optional theme -->
-        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css"/>
-
-    </h:head>
-
-    <h:body>
+<!DOCTYPE html [
+    <!ENTITY nbsp "&#160;"> 
+    ]>
+    <!--[if IE 8]>         <html class="ie8"> <![endif]-->
+    <!--[if IE 9]>         <html class="ie9 gt-ie8"> <![endif]-->
+    <!--[if gt IE 9]><!-->    
+    <html class="gt-ie8 gt-ie9 not-ie" xmlns="http://www.w3.org/1999/xhtml"
+          xmlns:ui="http://java.sun.com/jsf/facelets"
+          xmlns:p="http://primefaces.org/ui"
+          xmlns:h="http://java.sun.com/jsf/html"
+          xmlns:f="http://java.sun.com/jsf/core">
+        <!--<![endif]-->
+        <f:view contentType="text/html" encoding="UTF-8">
+            <h:head>
+                <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+                <meta http-equiv="Pragma" content="no-cache" />
+                <meta http-equiv="Expires" content="0" />
+                <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+                <meta charset="utf-8"/>
+                <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+                <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"/>
+                <title><ui:insert name="title">Recuperar contraseña - GoDesk Platform</ui:insert></title>           
 
 
 
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-6 col-md-4 col-md-offset-4 col-sm-offset-3">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <span class="glyphicon glyphicon-lock"></span> #{bundle.LoginTitleForgot} </div>
-                        <div class="panel-body">
+                <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,600,700,300&amp;subset=latin" rel="stylesheet" type="text/css"></link>
+                <!-- Pixel Admin's stylesheets -->
 
-                            <h:form id="form-signin" styleClass="form-horizontal" role="form">
+                <link href="#{facesContext.externalContext.requestContextPath}/resources/stylesheets/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+                <link href="#{facesContext.externalContext.requestContextPath}/resources/stylesheets/pixel-admin.min.css" rel="stylesheet" type="text/css"/>
+                <link href="#{facesContext.externalContext.requestContextPath}/resources/stylesheets/pages.min.css" rel="stylesheet" type="text/css"/>
+                <link href="#{facesContext.externalContext.requestContextPath}/resources/stylesheets/themes.min.css" rel="stylesheet" type="text/css"/>
+                <link href="#{facesContext.externalContext.requestContextPath}/resources/css/custom.css" rel="stylesheet" type="text/css"/>
 
-
-
-
-                                <div class="form-group">
-                                    <label for="usuario" class="col-sm-3 control-label">
-                                        Usuario</label>
-                                    <div class="col-sm-9">
-                                        <h:inputText id="usuario" required="true" requiredMessage="Introduce tu nombre de usuario."
-                                                     styleClass="form-control"  
-                                                     value="#{loginController.username}" title="#{bundle.EditUsuarioTitle_idUsuario}"/>
-                                        <p:watermark for="usuario" value="Nombre de Usuario"/>
-                                        <h:message for="usuario" errorClass="text-danger"/>
-
-                                    </div>
-                                </div>
-
-                                <div class="form-group">
-                                    <div class="col-sm-12">
-                                        <label for="Captcha">Confirmenos que usted es un ser humano, Favor ingrese el texto que se visualiza en la imagen</label>
-                                        <p:captcha id="Captcha" label="Captcha" language="es" required="true" requiredMessage="Favor ingrese el texto que se visualiza en la imagen." />  
-                                        <h:message for="Captcha" errorClass="text-danger" />
-                                    </div>
-
-                                </div>
-
-                                <div class="form-group last">
-                                    <div class="col-sm-12">
-                                        <p:commandButton ajax="false" action="#{loginController.resetPassAction()}" 
-                                                         styleClass="btn btn-sm btn-warning btn-block"
-                                                         value="#{bundle.LoginUsuarioForgotBtn}" 
-                                                         onclick="jQuery(this).addClass('ui-state-disabled')"/>
-                                    </div>
-                                </div>
+                <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"/>
 
 
-                                <p:messages globalOnly="true" closable="true" />
+
+                <h:outputScript name="jsf.js" library="javax.faces"/>
+
+                <ui:insert name="head"></ui:insert>
+                <ui:insert name="scripts"></ui:insert>
+            </h:head>
+
+            <h:body id="mainbody" styleClass="theme-default page-signin-alt">   
+
+                <p:ajaxStatus onstart="PF('statusDialog').show()" onsuccess="PF('statusDialog').hide()" />
+
+                <p:dialog widgetVar="statusDialog" modal="true" draggable="false" closable="false" resizable="false" showHeader="false">
+                    <div class="text-center">
+                        <p:outputLabel value="Espere porfavor..."/>
+                        <br/>
+                        <p:graphicImage library="images" name="ajaxloadingbar.gif" />
+                    </div>
+                </p:dialog>
 
 
-                            </h:form>
-                        </div>
-                        <div class="panel-footer">
-                            <p>#{bundle.ForgotMsg}</p>
-                            <h:form>
-                                <p:commandLink action="login" ajax="false" immediate="true"
-                                               value="Volver">
-                                </p:commandLink>
-                            </h:form>
-                        </div>
+                <div class="signin-header">
+                    <a href="http://www.godesk.cl" class="logo">
+                        <p:graphicImage library="images" name="LogoGODesk.png" title="GoDesk"/>
+                    </a> <!-- / .logo -->
+                    <a href="login.xhtml" class="btn btn-warning">LOGIN</a>
+                </div> <!-- / .header -->
+
+                <h1 class="form-header">Olvidaste tu contraseña GoDesk?</h1>
+                <!-- Form -->
+                <h:form id="form-signin" styleClass="panel">
+
+                    <h:messages globalOnly="true" errorClass="text-danger"/>
+
+                    <div class="form-group">
+                        <h:inputText id="usuario" required="true" requiredMessage="Introduce tu nombre de usuario."
+                                     styleClass="form-control input-lg"  
+                                     value="#{loginController.username}" title="#{bundle.EditUsuarioTitle_idUsuario}" 
+                                     />
+                        <p:watermark for="usuario" value="Nombre de Usuario"/>
+                    </div> <!-- / Username -->
+
+                    <div class="form-group">
+                        <h:inputText id="tenantId" required="true" requiredMessage="Introduce tu #{bundle.tenantLabel}"
+                                     styleClass="form-control input-lg"  
+                                     value="#{loginController.tenantId}" 
+                                     />
+                        <p:watermark for="tenantId" value="#{bundle.tenantLabel}"/>
+                    </div> <!-- / Tenant -->
+
+                    <div class="form-group no-padding">
+
+                            <label for="Captcha">Eres Spam o un bot?</label>
+                            <p:captcha id="Captcha" label="Captcha" language="es" 
+                                       required="true" requiredMessage="Introduzca el texto que se visualiza en la imagen." />  
+                            <h:message for="Captcha" errorClass="text-danger" />
+
+                    </div> <!-- / Password -->
+
+                    <p:outputPanel id="msgs" styleClass="form-group">
+                        <p:messages/>
+                    </p:outputPanel>
+                    
+
+
+                    <div class="form-actions">
+
+
+                        <p:commandLink id="submit" type="submit" action="#{loginController.resetPassAction}" 
+                                         update="@this msgs" value="#{bundle.LoginUsuarioForgotBtn}"
+                                         styleClass="btn btn-primary btn-block btn-lg"
+                                         onclick="jQuery(this).addClass('ui-state-disabled');
+                                             jQuery(this).children().addClass('fa fa-refresh fa-spin')">
+                            <i class=""></i> 
+                        </p:commandLink>
+
+
+                    </div> <!-- / .form-actions -->
+                </h:form>
+                <!-- / Form -->
+
+                <div id="footer">
+                    <div class="container">
+                        <p class="text-muted" align="center">Powered by Go Desk Chile Ltda. <a href="http://www.godesk.cl">www.godesk.cl</a>.</p>
                     </div>
                 </div>
-            </div>
-        </div>
 
 
+                <!-- Pixel Admin's javascripts -->
+                <script src="#{facesContext.externalContext.requestContextPath}/resources/javascripts/bootstrap.min.js"></script>
 
-        <div id="footer">
-            <div class="container">
-                <p class="text-muted" align="center">Powered by GoDesk Chile. <a href="http://www.godesk.cl">www.godesk.cl</a>.</p>
-            </div>
-        </div>
+                <script src="#{facesContext.externalContext.requestContextPath}/resources/javascripts/pixel-admin.min.js"></script>
+
+                <!-- Get jQuery from Google CDN -->
+                <!--[if !IE]> -->
+                <script type="text/javascript">
+                                                 //<![CDATA[
+                                                 window.jQuery || document.write('<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js">' + "<" + "/script>");
+                                                 //]]>
+                </script>
+
+                <!-- <![endif]-->
+                <!--[if lte IE 9]>
+                 <script type="text/javascript">
+                    //<![CDATA[
+                    window.jQuery || document.write('<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js">'+"<"+"/script>");
+                    //]]>
+               </script>
+                <![endif]-->
+
+                <script type="text/javascript">
+                    window.PixelAdmin.start([
+                        function () {
+                            $("#form-signin").validate({focusInvalid: true, errorPlacement: function () {
+                                }});
+
+                            // Validate username
+                            $("#username_id").rules("add", {
+                                required: true,
+                                minlength: 3
+                            });
+
+                            // Validate password
+                            $("#password_id").rules("add", {
+                                required: true,
+                                minlength: 6
+                            });
+                        }
+                    ]);
+                </script>
 
 
-    </h:body>
-</html>
+            </h:body>
+        </f:view>
+    </html>
