--- a/src/main/webapp/script/caso/responder.xhtml
+++ b/src/main/webapp/script/caso/responder.xhtml
@@ -254,23 +254,31 @@
                     <p:commandLink actionListener="#{casoController.crearNota(false)}" 
                                    styleClass="btn btn-primary"
                                    rendered="#{not casoController.replyByEmail}"
-                                   update=":mainform:messages :formint1 :info-panel :formact :message-details-reply">
+                                   update=":mainform:messages :formint1 :info-panel :formact :message-details-reply"
+                                   onclick="jQuery(this).addClass('ui-state-disabled');
+                                           jQuery(this).children().addClass('fa fa-refresh fa-spin')">
                         <i class="fa fa-comment"></i> Guardar comentario
                     </p:commandLink>
+
+
                 </div>
 
                 <div class="btn-group">
                     <p:commandLink actionListener="#{casoController.crearNota(true)}" 
                                    styleClass="btn btn-primary" rendered="#{not casoController.replyByEmail}"
-                                   update=":mainform:messages :formint1 :info-panel :formact :message-details-reply">
-                        <i class="fa fa-comment"></i> Guardar comentario y notificar al cliente  <i class="fa fa-envelope-o"></i>
+                                   update=":mainform:messages :formint1 :info-panel :formact :message-details-reply"
+                                   onclick="jQuery(this).addClass('ui-state-disabled');
+                                           jQuery(this).children().addClass('fa fa-refresh fa-spin')">
+                        <i class="fa fa-comment"></i> Guardar comentario y notificar al cliente
                     </p:commandLink>
                 </div>
 
                 <div class="btn-group">
                     <p:commandLink actionListener="#{casoController.responder()}" 
                                    styleClass="btn btn-primary" rendered="#{casoController.replyByEmail}"
-                                   update=":mainform:messages :formint1 :info-panel :formact :message-details-reply">
+                                   update=":mainform:messages :formint1 :info-panel :formact :message-details-reply"
+                                   onclick="jQuery(this).addClass('ui-state-disabled');
+                                           jQuery(this).children().addClass('fa fa-refresh fa-spin')">
                         <i class="fa fa-envelope"></i> Enviar
                     </p:commandLink>
                 </div>
