--- a/src/main/webapp/script/recentActivity.xhtml
+++ b/src/main/webapp/script/recentActivity.xhtml
@@ -4,6 +4,7 @@
     ]>
     <ui:composition 
         xmlns="http://www.w3.org/1999/xhtml"
+        xmlns:c="http://java.sun.com/jsp/jstl/core"
         xmlns:f="http://java.sun.com/jsf/core"
         xmlns:h="http://java.sun.com/jsf/html"
         xmlns:p="http://primefaces.org/ui"
@@ -14,82 +15,42 @@
         <h:form id="activityForm">
 
 
-                <div class="panel panel-transparent panel-dark widget-comments hidden-xs">
-                    <div class="panel-heading">
-                        <span class="panel-title"><i class="panel-title-icon fa fa-comments"></i>Actividad Reciente en tus casos</span>
-                    </div> <!-- / .panel-heading -->
-                    <div class="panel-body">
+            <div class="panel panel-transparent panel-dark widget-comments hidden-xs">
+                <div class="panel-heading">
+                    <span class="panel-title"><i class="panel-title-icon fa fa-comments"></i>Log de Actividad en tus casos</span>
+                </div> <!-- / .panel-heading -->
+                <div class="panel-body">
+
+                    <c:forEach items="#{auditLogController.getActivityLogs(UserSessionBean.current.idUsuario)}" var="item" varStatus="loop">
 
                         <div class="comment">
                             <img src="" alt="" class="comment-avatar"/>
                             <div class="comment-body">
                                 <div class="comment-by">
-                                    <a href="#" title="">Denise Steiner</a> commented on <a href="#" title="">Article Name</a>
+                                    <span class="btn-link">#{item.idUser}</span> 
+                                    #{item.idCampo eq null ? '':'ha cambiado el valor de '.concat(item.idCampo)} en <span class="btn-link">
+                                        <h:outputText value="[ref\##{item.idCaso}]"/>
+                                    </span>
                                 </div>
                                 <div class="comment-text">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.
+                                    #{item.newValue}
                                 </div>
                                 <div class="comment-actions">
-                                    <a href="#"><i class="fa fa-pencil"></i>Edit</a>
-                                    <a href="#"><i class="fa fa-times"></i>Remove</a>
-                                    <span class="pull-right">2 hours ago</span>
+                                    <p:commandLink action="#{casoController.prepareEditCaso(item.idCaso)}" 
+                                                   ajax="false" styleClass="btn-link" immediate="true">
+                                        <i class="fa fa-pencil"></i>Abrir Caso
+                                    </p:commandLink>
+                                    <span class="pull-right" title="#{casoController.formatDate(item.fecha)}">
+                                        #{casoController.prettyDate(item.fecha)}
+                                    </span>
                                 </div>
                             </div> <!-- / .comment-body -->
                         </div> <!-- / .comment -->
 
-                        <div class="comment">
-                            <img src="" alt="" class="comment-avatar"/>
-                            <div class="comment-body">
-                                <div class="comment-by">
-                                    <a href="#" title="">Michelle Bortz</a> commented on <a href="#" title="">Article Name</a>
-                                </div>
-                                <div class="comment-text">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.
-                                </div>
-                                <div class="comment-actions">
-                                    <a href="#"><i class="fa fa-pencil"></i>Edit</a>
-                                    <a href="#"><i class="fa fa-times"></i>Remove</a>
-                                    <span class="pull-right">2 hours ago</span>
-                                </div>
-                            </div> <!-- / .comment-body -->
-                        </div> <!-- / .comment -->
+                    </c:forEach>
 
-                        <div class="comment">
-                            <img src="" alt="" class="comment-avatar"/>
-                            <div class="comment-body">
-                                <div class="comment-by">
-                                    <a href="#" title="">Robert Jang</a> commented on <a href="#" title="">Article Name</a>
-                                </div>
-                                <div class="comment-text">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.
-                                </div>
-                                <div class="comment-actions">
-                                    <a href="#"><i class="fa fa-pencil"></i>Edit</a>
-                                    <a href="#"><i class="fa fa-times"></i>Remove</a>
-                                    <span class="pull-right">2 hours ago</span>
-                                </div>
-                            </div> <!-- / .comment-body -->
-                        </div> <!-- / .comment -->
-
-                        <div class="comment">
-                            <img src="" alt="" class="comment-avatar"/>
-                            <div class="comment-body">
-                                <div class="comment-by">
-                                    <a href="#" title="">Timothy Owens</a> commented on <a href="#" title="">Article Name</a>
-                                </div>
-                                <div class="comment-text">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.
-                                </div>
-                                <div class="comment-actions">
-                                    <a href="#"><i class="fa fa-pencil"></i>Edit</a>
-                                    <a href="#"><i class="fa fa-times"></i>Remove</a>
-                                    <span class="pull-right">2 hours ago</span>
-                                </div>
-                            </div> <!-- / .comment-body -->
-                        </div> <!-- / .comment -->
-
-                    </div> <!-- / .panel-body -->
-                </div>
+                </div> <!-- / .panel-body -->
+            </div>
 
         </h:form>
 
