--- a/src/main/webapp/script/template_inbox_bootstrap.xhtml
+++ b/src/main/webapp/script/template_inbox_bootstrap.xhtml
@@ -26,11 +26,11 @@
                 <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,600,700,300&amp;subset=latin" rel="stylesheet" type="text/css"></link>
                 <!-- Pixel Admin's stylesheets -->
 
-                <link href="#{facesContext.externalContext.requestContextPath}/resources/stylesheets/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-                <link href="#{facesContext.externalContext.requestContextPath}/resources/stylesheets/pixel-admin.min.css" rel="stylesheet" type="text/css"/>
-                <link href="#{facesContext.externalContext.requestContextPath}/resources/stylesheets/widgets.min.css" rel="stylesheet" type="text/css"/>
-                <link href="#{facesContext.externalContext.requestContextPath}/resources/stylesheets/pages.min.css" rel="stylesheet" type="text/css"/>
-                <link href="#{facesContext.externalContext.requestContextPath}/resources/stylesheets/themes.min.css" rel="stylesheet" type="text/css"/>
+                <link href="#{facesContext.externalContext.requestContextPath}/resources/stylesheets/bootstrap.css" rel="stylesheet" type="text/css"/>
+                <link href="#{facesContext.externalContext.requestContextPath}/resources/stylesheets/pixel-admin.css" rel="stylesheet" type="text/css"/>
+                <link href="#{facesContext.externalContext.requestContextPath}/resources/stylesheets/widgets.css" rel="stylesheet" type="text/css"/>
+                <link href="#{facesContext.externalContext.requestContextPath}/resources/stylesheets/pages.css" rel="stylesheet" type="text/css"/>
+                <link href="#{facesContext.externalContext.requestContextPath}/resources/stylesheets/themes.css" rel="stylesheet" type="text/css"/>
                 <link href="#{facesContext.externalContext.requestContextPath}/resources/css/bootstrap-datetimepicker.min.css" rel="stylesheet" type="text/css"/>
 
                 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"/>
@@ -655,9 +655,11 @@
 
                 <script src="#{facesContext.externalContext.requestContextPath}/resources/javascripts/bootstrap.min.js"></script>
 
-                <script src="#{facesContext.externalContext.requestContextPath}/resources/javascripts/pixel-admin.min.js"></script>
+                <script src="#{facesContext.externalContext.requestContextPath}/resources/javascripts/pixel-admin.js"></script>
                 <script src="#{facesContext.externalContext.requestContextPath}/resources/js/bootstrap-datetimepicker.min.js"></script>
                 <script src="#{facesContext.externalContext.requestContextPath}/resources/js/jquery.expander.min.js"></script>
+
+                <script src="#{facesContext.externalContext.requestContextPath}/resources/js/typeahead.min.js"></script>
 
                 <!--[if lt IE 9]>
                     <script src="#{facesContext.externalContext.requestContextPath}/resources/javascripts/ie.min.js"></script>
