--- a/src/main/webapp/script/index.xhtml
+++ b/src/main/webapp/script/index.xhtml
@@ -514,7 +514,7 @@
                         <h:panelGrid columns="1">
                             <c:forEach items="#{casoController.selectedItems}" var="item" >
                                 <h:commandLink action="#{casoController.filterByIdCaso(item.idCaso)}" >
-                                    <h:outputText styleClass="ticket-status" 
+                                    <h:outputText styleClass="label" 
                                                   style="background: \##{item.idSubEstado.backgroundColor}; color: \##{item.idSubEstado.fontColor};" value="#{item.idSubEstado.nombre}"
                                                   />
                                     <h:outputText value=" #{item.tipoCaso.nombre} N°#{item.idCaso} - #{item.tema}"/>
