--- a/src/main/webapp/script/recentActivity.xhtml
+++ b/src/main/webapp/script/recentActivity.xhtml
@@ -24,7 +24,7 @@
                     <c:forEach items="#{auditLogController.getActivityLogs(UserSessionBean.current.idUsuario)}" var="item" varStatus="loop">
 
                         <div class="comment">
-                            <img src="" alt="" class="comment-avatar"/>
+                            <img src="#{facesContext.externalContext.requestContextPath}/resources/images/pixel-admin/avatar.png" alt="" class="comment-avatar"/>
                             <div class="comment-body">
                                 <div class="comment-by">
                                     <span class="btn-link">#{item.idUser}</span> 
