Fix de link en el dashBoard de Listar Alertas
se cambia de alertaList a prepareList, manda error 500 alertaList y no
se puede llegar a la lista.

--- a/src/main/webapp/script/template_inbox_bootstrap.xhtml
+++ b/src/main/webapp/script/template_inbox_bootstrap.xhtml
@@ -492,7 +492,7 @@
 
                                                 <li>
                                                     <p:commandLink title="Alertas" 
-                                                                   action="#{auditLogController.alertList()}" ajax="false">
+                                                                   action="#{auditLogController.prepareList()}" ajax="false">
                                                         <i class="menu-icon fa fa-exclamation-triangle"></i>
                                                         <span class="mm-text">Alertas</span>
                                                     </p:commandLink>
